--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="rightSection">
-                <img src="Programmer-PNG-Images-HD.png" alt="Illustration of a programmer coding">
+                <img src="Programmer-PNG-Images-HD.png" alt="">
             </div>
         </section>
 
@@ -53,21 +53,21 @@
             <h1>Work Experience</h1>
             <div class="experience-box">
                 <div class="experience-item">
-                    <img class="image-top" src="html1.png" alt="HTML5 Logo">
+                    <img class="image-top" src="html1.png" alt="">
                     <div class="experience-title">HTML Developer</div>
                     <div class="experience-desc">
                         Learned HTML through an internship course and built several static sites and project pages.
                     </div>
                 </div>
                 <div class="experience-item">
-                    <img class="image-top" src="css.png" alt="CSS3 Logo">
+                    <img class="image-top" src="css.png" alt="">
                     <div class="experience-title">CSS Developer</div>
                     <div class="experience-desc">
                         Mastered CSS for styling, layouts with Flexbox and Grid, and creating responsive designs.
                     </div>
                 </div>
                 <div class="experience-item">
-                    <img class="image-top" src="javascript.png" alt="JavaScript Logo">
+                    <img class="image-top" src="javascript.png" alt="">
                     <div class="experience-title">JavaScript Developer</div>
                     <div class="experience-desc">
                         Utilized JavaScript to create dynamic and interactive user experiences on the web.
@@ -100,7 +100,6 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-            // Added more strings and loop for a dynamic effect
             strings: ['Web Developer.', 'UI/UX Enthusiast.', 'Programmer.'],
             typeSpeed: 50,
             backSpeed: 50,
