--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="rightSection">
-                <img src="./images/Programmer-PNG-Images-HD.png" alt="">
+                <img src="Programmer-PNG-Images-HD.png" alt="a">
             </div>
         </section>
 
@@ -53,21 +53,21 @@
             <h1>Work Experience</h1>
             <div class="experience-box">
                 <div class="experience-item">
-                    <img class="image-top" src="./images/html1.png" alt="">
+                    <img class="image-top" src="html1.png" alt="b">
                     <div class="experience-title">HTML Developer</div>
                     <div class="experience-desc">
                         Learned HTML through an internship course and built several static sites and project pages.
                     </div>
                 </div>
                 <div class="experience-item">
-                    <img class="image-top" src="./images/css.png" alt="">
+                    <img class="image-top" src="css.png" alt="c">
                     <div class="experience-title">CSS Developer</div>
                     <div class="experience-desc">
                         Mastered CSS for styling, layouts with Flexbox and Grid, and creating responsive designs.
                     </div>
                 </div>
                 <div class="experience-item">
-                    <img class="image-top" src="./images/javascript.png" alt="">
+                    <img class="image-top" src="javascript.png" alt="d">
                     <div class="experience-title">JavaScript Developer</div>
                     <div class="experience-desc">
                         Utilized JavaScript to create dynamic and interactive user experiences on the web.
